<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:background="@drawable/custom_bg">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@drawable/custom_bg">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/intern"
            android:id="@+id/tvIntern"
            android:layout_gravity="center"
            android:padding="18dp"
            android:background="@drawable/rounded_corners"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/student"
            android:layout_centerHorizontal="true"
            android:id="@+id/tvStudent"
            android:padding="18dp"
            android:background="@drawable/rounded_corners"
            android:layout_below="@+id/tvIntern"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/teacher"
            android:id="@+id/tvTeacher"
            android:padding="18dp"
            android:background="@drawable/rounded_corners"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tvStudent"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/medical_prof"
            android:id="@+id/tvMedical_profession"
            android:padding="18dp"
            android:background="@drawable/rounded_corners"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tvTeacher"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</ScrollView>